# parallel_lang

./: README.md  info.txt
lang/: CMakeLists.txt
lang/src/: main.cpp
lang/src/compiler/: compiler.cpp  compiler.hpp
lang/src/compiler/error_printer/: error_printer.cpp  line_description.hpp
lang/src/compiler/frontend/: frontend.cpp  frontend.hpp
lang/src/compiler/frontend/lexer/: lex_error.cpp  lexer.cpp  lexer.hpp
lang/src/compiler/frontend/token/: token.cpp  token.hpp
lang/src/compiler/syntax_tree/: program.hpp
lang/src/compiler/syntax_tree/statement_sequence/: statement_sequence.hpp
lang/src/compiler/syntax_tree/statements/: compound_expression_statement.cpp  statement_container.cpp
lang/src/error_printer/: colors.hpp  error_printer.cpp  error_printer.hpp  line_description.cpp
lang/src/front_end/: front_end.cpp
lang/src/front_end/lexer/: lexer.cpp
lang/src/front_end/parser/: parse_error.cpp  parse_error.hpp  parse_result.hpp  parser.cpp  parser.hpp
lang/src/front_end/parser/statement/: statement_container.cpp
lang/src/front_end/parser/statement_sequence/: statement_sequence.cpp
lang/src/front_end/token/: token.cpp  token.hpp
lang/src/syntax_tree/: program.cpp
lang/src/syntax_tree/compound_expression/: compound_expression.hpp
lang/src/syntax_tree/statement_sequence/: statement_sequence.cpp  statement_sequence.hpp
lang/src/syntax_tree/statements/: statements.hpp
